
****  Fix $display with string without %s, bug1441. [Denis Rystsov]

****  Fix parameter function string returns, bug1441. [Denis Rystsov]

****  Fix real parameter assignment, bug1427. [Todd Strader]

****  Fix invalid XML output due to special chars, bug1444. [Kanad Kanhere]

****  Fix performance when mulithreaded on 1 CPU, bug1455. [Stefan Wallentowitz]


* Verilator 4.014 2019-05-08

***   Add --trace-fst-thread.

****  Support '#' comments in $readmem, bug1411. [Frederick Requin]

****  Support "'dx" constants, bug1423. [Udi Finkelstein]

****  For FST tracing use LZ4 compression. [Tony Bybell]

****  Add error when use parameters without value, bug1424. [Peter Gerst]

****  Auto-extend and WIDTH warn on unsized X/Zs, bug1423. [Udi Finkelstein]

****  Fix missing VL_SHIFTL_ errors, bug1412, bug1415. [Larry Lee]

****  Fix MinGW GCC 6 printf formats, bug1413. [Sergey Kvachonok]

****  Fix test problems when missing fst2vcd, bug1417. [Todd Strader]

****  Fix GTKWave register warning, bug1421. [Pieter Kapsenberg]

****  Fix FST enums not displaying, bug1426. [Danilo Ramos]

****  Fix table compile error with multiinterfaces, bug1431. [Bogdan Vukobratovic]


* Verilator 4.012 2019-3-23

***   Add +verilator+seed, bug1396. [Stan Sokorac]

***   Support $fread.  [Leendert van Doorn]

***   Support void' cast on functions called as tasks, bug1383. [Al Grant]

***   Add IGNOREDRETURN warning, bug1383.

****  Report PORTSHORT errors on concat constants, bug 1400. [Will Korteland]

****  Fix VERILATOR_GDB being ignored, msg2860. [Yu Sheng Lin]

****  Fix $value$plus$args missing verilated_heavy.h. [Yi-Chung Chen]

****  Fix MSVC compile error, bug1406. [Benjamin Gartner]

****  Fix maintainer test when no Parallel::Forker, msg2630. [Enzo Chi]

****  Fix +1364-1995ext flags applying too late, bug1384. [Al Grant]


* Verilator 4.010 2019-01-27

***   Removed --trace-lxt2, use --trace-fst instead.

****  For --xml, add additional information, bug1372. [Jonathan Kimmitt]