@@ -30,6 +30,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix performance when mulithreaded on 1 CPU, bug1455. [Stefan Wallentowitz]
 
+****  Fix sameHash error on type parameters, bug1456. [Todd Strader]
+
 
 * Verilator 4.014 2019-05-08
 
